Design of login and signup page completed with dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,16 +3,20 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --color-text1: 0 0 0;
+  --color-text2: 255 255 255;
+  --color-themeColor1: 255 255 255;
+  --color-themeColor2: 255 255 255;
+  --color-themeColor3: 255 165 0;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --color-text1: 255 255 255;
+    --color-text2: 0 0 0;
+    --color-themeColor1: 0 0 0;
+    --color-themeColor2: 12 12 12;
+    --color-themeColor3: 255 165 0;
   }
 }
 
